examples/NP_based_on_APP_Name.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-theblacklist
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: theblacklist
    ports:
      - protocol: TCP
        port: 3306
