examples/NP_based_on_namespace.yml
# You will need to label the namespace where traffic comes from with:
# oc label namespace test testing=theblacklist
#
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-namespace
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          testing: theblacklist
    podSelector:                # uncomment for specific app in this NS
      matchLabels:
        app: testblacklist
    ports:
      - protocol: TCP
        port: 3306
